# Nono

./: .gitignore  README.md
librarian/: .gitignore  blueprint.txt  pyproject.toml
librarian/.claude/: settings.json
librarian/.claude/commands/: linter-kg.md
librarian/docs/superpowers/: 2026-06-24-phase-two-roadmap.md
librarian/scripts/: append_log.py  build_embeddings.py  classify_evidence_tier.py  cost_report.py  pmid_ledger.py  render_digest.py  search_nodes.py  stamp_literature.py  validate_test_output.py
librarian/scripts-bootstrap/: bootstrap.sh
librarian/scripts/lib/: build.py  embeddings.py  llm.py
librarian/src/nono_librarian/: paths.py
librarian/tests/fixtures/: mock_esearch.json  mock_pubmed.json  mock_pubmed_fulltext.json  mock_search_results.json  mock_transcript.jsonl
librarian/tests/unit/: test_append_log.py  test_assemble.py  test_build_embeddings.py  test_build_lib.py  test_chase_citations.py  test_check_retractions.py  test_cost_report.py  test_embeddings_lib.py  test_evaluate_lib.py  test_finalize.py  test_frontmatter_merge.py  test_gather.py  test_graph_schema.py  test_hook_paths.py  test_librarian_build.py  test_librarian_evaluate.py  test_linter_quotes.py  test_llm_lib.py  test_node_template.py  test_pmid_ledger_retracted.py  test_preflight.py  test_pubmed_lib.py  test_render_digest.py  test_run_record_schema.py  test_search_nodes_semantic.py  test_stamp_last_run.py  test_verify.py
pi/: .gitignore  pyproject.toml
pi/src/nono_pi/: __init__.py  paths.py
pi/tests/unit/: test_analysis_plan.py  test_assemble_si.py  test_dispatch.py  (+11 more)
(+148 files in other folders)
