[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nono-librarian"
version = "0.1.0"
description = "Agent-driven PubMed knowledge-graph toolkit (libririan)"
requires-python = ">=3.14"
dependencies = [
    "PyYAML>=6.0",
    "jsonschema>=4.0",
    "fastembed>=0.3",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
nono-librarian = "nono_librarian.cli.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"nono_librarian.data" = ["templates/*", "schemas/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
